--- a/main.Rmd
+++ b/main.Rmd
@@ -104,7 +104,7 @@ Sugerimos que você assista essa palestra em um computador de mesa ou notebook, 
 
 - Realizou três IC's (Geometria Algébrica, Análise na Reta e Estatística) 
 
-- Tem interesse continuar os estudos na área de Estatística!
+- Tem interesse de continuar os estudos na área de Estatística!
 ]
 
 .pull-right[
@@ -179,8 +179,8 @@ _shinydashboard_, _ggplot_ e _learnR_, entre outras ferramentas tecnológicas.
  materiais estatísticos relevantes e as possibilidades de uso, transformação de 
  materiais ou criação de novas ferramentas para o ensino.
  
- - Identificamos muito material interessante, _applets_, _softwares_, listas de 
- exercícios e muitas ideias...
+ - Identificamos materiais interessantes, _applets_, _softwares_, listas de 
+ exercícios, entre outras ideias e trabalhos...
  
 ---
 
@@ -212,7 +212,7 @@ colocam Belo Horizonte, Belo-Horizonte, Belo - Horizonte, Belo- Horizonte, Belo
 diante!
 
 Criamos então um código em linguagem R que faz a leitura dos dados, transforma tudo 
-em caiixa alta, remove acentos e caracteres especiais, corrige alguns desses erros 
+em caixa alta, remove acentos e caracteres especiais, corrige alguns desses erros 
 que já apareceram no banco de dados e apresenta as tabelas e gráficos corrigidos 
 ou próximo do melhor resultado. É fato que semestralmente, mudanças precisam ser 
 realizadas nos códigos! Vejam [aqui](https://rpubs.com/fsbmat/CensoEst105) alguns 
